<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" 
     android:layout_width="fill_parent" 
     android:layout_height="fill_parent">
            <TableLayout android:paddingTop="10.0dip" 
            	android:paddingRight="1.0dip" 
            	android:layout_width="fill_parent" 
            	android:layout_height="fill_parent" 
            	android:stretchColumns="1">
                <TableRow>
                    <TextView android:gravity="right" android:text="@string/network_location" />
                    <EditText android:textSize="14.0dip" android:id="@+id/location" android:paddingLeft="6.0dip" android:hint="@string/network_location_hint_text" android:scrollHorizontally="true" android:singleLine="true" />
                </TableRow>
                <TableRow>
                    <TextView android:gravity="right" android:text="@string/network_location_example" />
                    <TextView android:textStyle="normal" android:id="@+id/example" android:text="@string/network_location_example_text" />
                </TableRow>
                <TableRow>
                    <TextView android:gravity="right" android:text="@string/network_location_user" />
                    <EditText android:textSize="14.0dip" android:id="@+id/username" android:scrollHorizontally="true" android:singleLine="true" />
                </TableRow>
                <TableRow>
                    <TextView android:gravity="right" android:text="@string/network_location_password" />
                    <EditText android:textSize="14.0dip" android:id="@+id/password" android:scrollHorizontally="true" android:password="true" android:singleLine="true" />
                </TableRow>
                <TableRow>
                    <TextView />
                    <CheckBox android:id="@+id/use_anonymous" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/network_location_anonymous" />
                </TableRow>
                <!--  <TableRow android:paddingTop="10.0dip">
                    <TextView android:gravity="right" android:text="@string/network_location_display" />
                    <EditText android:textSize="14.0dip" android:id="@+id/display" android:hint="@string/network_location_display_hint_text" android:scrollHorizontally="true" android:singleLine="true" />
                </TableRow>-->
            </TableLayout>
            <!--  <LinearLayout android:gravity="center_horizontal" android:orientation="horizontal" android:background="#55e0e0e0" android:paddingTop="10.0dip" android:paddingBottom="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <Button android:id="@id/login" android:layout_width="120.0dip" android:layout_height="wrap_content" android:text="@string/network_location_ok" />
                <Button android:id="@id/cancel" android:layout_width="120.0dip" android:layout_height="wrap_content" android:text="@string/network_location_cancel" android_layoutMarginLeft="30dip" />
            </LinearLayout>-->
 </LinearLayout>


