<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:src="@drawable/tool_bar_selector"
    android:focusable="true">       		
    <LinearLayout
    	android:id="@+id/tool_home"
    	android:focusable="true"
    	style="@style/tool_bar_LinearLayout">		    
	    <TextView
	    	android:id="@+id/tool_home_text"
	    	android:text="@string/str_home"
    		style="@style/tool_bar_TextView">	
	    </TextView>
	    <ImageView
	    	android:background="@drawable/home"
    		style="@style/tool_bar_ImageView">	
	    </ImageView>
    </LinearLayout>
    
    <LinearLayout
    	android:id="@+id/tool_level_up"
    	android:focusable="true"
    	style="@style/tool_bar_LinearLayout">		
	    <TextView
	    	android:id="@+id/tool_levelup_text"
	    	android:text="@string/str_level_up"
    		style="@style/tool_bar_TextView">	
	    </TextView>
	    <ImageView
	    	android:background="@drawable/level_up"
    		style="@style/tool_bar_ImageView">	
	    </ImageView>
    </LinearLayout>
    
    <LinearLayout
    	android:id="@+id/tool_multi_choice"
    	android:focusable="true"
    	style="@style/tool_bar_LinearLayout">		
	    <TextView
	    	android:id="@+id/tool_multichoice_text"
	    	android:text="@string/str_multi_choice"
    		style="@style/tool_bar_TextView">	
	    </TextView>
	    <ImageView
	    	android:id="@+id/tool_multi_choice_ImageView"
	    	android:background="@drawable/list"
    		style="@style/tool_bar_ImageView">	
	    </ImageView>
    </LinearLayout>
    
    <LinearLayout
    	android:id="@+id/tool_editor"
    	android:focusable="true"
    	style="@style/tool_bar_LinearLayout">		
	    <TextView
	    	android:id="@+id/tool_editor_text"
	    	android:text="@string/str_editor"
    		style="@style/tool_bar_TextView">	
	    </TextView>
	    <ImageView
	    	android:background="@drawable/menu_edit"
    		style="@style/tool_bar_ImageView">	
	    </ImageView>
    </LinearLayout>	    
	    
    <LinearLayout
    	android:id="@+id/tool_folder_back"
    	android:focusable="true"
    	style="@style/tool_bar_LinearLayout">		
	    <TextView
	    	android:id="@+id/tool_back_text"
	    	android:text="@string/str_folder_back"
    		style="@style/tool_bar_TextView">	
	    </TextView>
	    <ImageView
	    	android:background="@drawable/folder_back"
    		style="@style/tool_bar_ImageView">	
	    </ImageView>
    </LinearLayout>
	    
    <LinearLayout
    	android:id="@+id/tool_folder_next"
    	android:focusable="true"
    	style="@style/tool_bar_LinearLayout">		
	    <TextView
	    	android:id="@+id/tool_next_text"
	    	android:text="@string/str_folder_next"
    		style="@style/tool_bar_TextView">	
	    </TextView>
	    <ImageView
	    	android:background="@drawable/folder_next"
    		style="@style/tool_bar_ImageView">	
	    </ImageView>
    </LinearLayout>	   
    
    <LinearLayout
    	android:id="@+id/tool_exit"
    	android:focusable="true"
    	style="@style/tool_bar_LinearLayout">		
	    <TextView
	    	android:text="@string/str_exit"
    		style="@style/tool_bar_TextView">	
	    </TextView>
	    <ImageView
	    	android:background="@drawable/close_b"
    		style="@style/tool_bar_ImageView">	
	    </ImageView>
    </LinearLayout>	 
</LinearLayout>
