<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2008 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
  
          http://www.apache.org/licenses/LICENSE-2.0
  
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
     
    android:background="@drawable/popup_blue_border_4"
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="40dip"
    android:background="@drawable/popup_win1"
    android:scaleType="fitXY"
    android:orientation="vertical">
	<LinearLayout
	    android:id="@+id/smb_search"	
	    android:focusable="true"
	    style="@style/editor_layout_LinearLayout">		 
    	<ImageView
    		android:background="@drawable/smb_search"
    		android:paddingLeft="20dip"
	    	style="@style/editor_layout_ImageView"/>		
	    <TextView
			android:id="@+id/smb_search_text"
			android:paddingLeft="40dip"
	        android:text="@string/smb_search"
	    	style="@style/editor_layout_TextView"/>
    </LinearLayout>
    
    <ImageView style="@style/editor_layout_Line"/>
    
    <LinearLayout
	    android:id="@+id/smb_new"
	    android:focusable="true"
	    style="@style/editor_layout_LinearLayout">		
    	<ImageView
    		android:background="@drawable/smb_add"
    		android:paddingLeft="20dip"
	    	style="@style/editor_layout_ImageView"/>	
	    <TextView 
			android:id="@+id/smb_new_text"
	        android:text="@string/smb_new"
	        android:paddingLeft="40dip"
			style="@style/editor_layout_TextView"/>
    </LinearLayout>
    
    <ImageView style="@style/editor_layout_Line"/>
    
    <LinearLayout
	    android:id="@+id/smb_delete"	
	    android:focusable="true"
	    style="@style/editor_layout_LinearLayout">		
    	<ImageView
    		android:background="@drawable/smb_delete"
    		android:paddingLeft="20dip"
	    	style="@style/editor_layout_ImageView"/>	
	    <TextView 
			android:id="@+id/smb_delete_text"
	        android:text="@string/smb_delete"
	        android:paddingLeft="40dip"
			style="@style/editor_layout_TextView"/>
    </LinearLayout>
    
    <ImageView style="@style/editor_layout_Line"/>
    	
    <LinearLayout
	    android:id="@+id/smb_edit"
	    android:focusable="true"
	    style="@style/editor_layout_LinearLayout">		
    	<ImageView
    		android:background="@drawable/smb_edit"
    		android:paddingLeft="20dip"
	    	style="@style/editor_layout_ImageView"/>	
		<TextView
			android:id="@+id/smb_edit_text"
	        android:text="@string/smb_edit"
	        android:paddingLeft="40dip"
			style="@style/editor_layout_TextView"/>
    </LinearLayout>
        
</LinearLayout>

