<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <TableLayout android:orientation="vertical" android:paddingLeft="5.0dip" android:paddingRight="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:stretchColumns="1">
            <TableRow>
                <TextView android:textStyle="bold" android:gravity="right" android:text="@string/network_location_user" />
                <EditText android:id="@+id/re_username" android:scrollHorizontally="true" android:singleLine="true" />
            </TableRow>
            <TableRow>
                <TextView android:textStyle="bold" android:gravity="right" android:text="@string/network_location_password" />
                <EditText android:id="@+id/re_password" android:scrollHorizontally="true" android:password="true" android:singleLine="true" />
            </TableRow>
            <TableRow>
                <TextView />
                <CheckBox android:id="@+id/re_use_anonymous" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/network_location_anonymous" />
            </TableRow>
            <!--<TableRow>
                <TextView />
                <CheckBox android:id="@+id/re_save" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/network_location_save" />
            </TableRow>-->
        </TableLayout>
        <!-- <LinearLayout android:gravity="center_horizontal" android:orientation="horizontal" android:paddingTop="15.0dip" android:paddingBottom="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <Button android:id="@+id/login" android:layout_width="100.0dip" android:layout_height="wrap_content" android:layout_marginRight="15.0dip" android:text="@string/network_location_ok" />
            <Button android:id="@+id/cancel" android:layout_width="100.0dip" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:text="@string/network_location_cancel" />
        </LinearLayout> -->
    </LinearLayout>
</ScrollView>

