<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="60dip"
    android:background="@drawable/popup_win1"
    android:scaleType="fitXY"
    android:orientation="vertical"> 
		<LinearLayout
		  android:id="@+id/layout_source"
		  android:layout_width="fill_parent"
		  android:layout_height="wrap_content"
		  android:gravity="center"
		  android:orientation="horizontal">
			<TextView
				android:id="@+id/source_text_title"
			    android:layout_height="wrap_content"
			    android:layout_width="wrap_content"
			    android:layout_marginLeft="20dip"
			    android:text="@string/str_source"
			    android:textSize="20dp"
			    android:gravity="left|center_vertical"/>
			 <TextView 
			    android:id="@+id/source_Text"
			    android:layout_height="wrap_content"
			    android:layout_width="wrap_content"
			    android:layout_marginLeft="5dip"
				android:scrollHorizontally="true"
				android:marqueeRepeatLimit="marquee_forever"
				android:ellipsize="start"
				android:singleLine="true"
			    android:textSize="20dp"
			    android:gravity="left|center_vertical"/>
		</LinearLayout>
		
		<LinearLayout
		  android:id="@+id/layout_target"
		  android:layout_width="fill_parent"
		  android:layout_height="wrap_content"
		  android:gravity="center"
		  android:orientation="horizontal">
			<TextView
			    android:id="@+id/target_text_title"
			    android:layout_height="wrap_content"
			    android:layout_width="wrap_content"
			    android:textSize="20dp"
			    android:layout_marginLeft="20dip"
			    android:text="@string/str_target"
			    android:gravity="left|center_vertical"/>
			 <TextView 
			    android:id="@+id/target_Text"
			    android:layout_height="wrap_content"
			    android:layout_width="wrap_content"
			    android:layout_marginLeft="5dip"
				android:scrollHorizontally="true"
				android:marqueeRepeatLimit="marquee_forever"
				android:ellipsize="start"
				android:singleLine="true"
			    android:textSize="20dp"
			    android:gravity="left|center_vertical"/>
		</LinearLayout>
		
		<LinearLayout
		    android:id="@+id/layout_one_percent"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:orientation="horizontal">
		  	<ProgressBar
		  		android:id="@+id/one_copy_percent" 
				android:layout_height="30dip" 
				android:layout_width="0dp" 
				android:layout_gravity="center" 
				android:layout_weight="4"
				android:max="100" 
				android:progress="0" 
				android:focusable="false"
				android:clickable="false"
				style="?android:attr/progressBarStyleHorizontal"/>  
			<TextView android:id="@+id/one_percent_Text"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:textSize="30sp"
				android:gravity="right"
				android:layout_weight="1"
				android:focusable="false"/>
		</LinearLayout>
		
		<LinearLayout
		    android:id="@+id/layout_all_percent"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:orientation="horizontal">
			<ProgressBar
		  		android:id="@+id/all_copy_percent" 
		     	android:layout_height="30dip" 
				android:layout_width="0dp" 
				android:layout_gravity="center" 
				android:layout_weight="4"
				android:max="100" 
				android:progress="0" 
				style="?android:attr/progressBarStyleHorizontal"/>  
			<TextView  android:id="@+id/all_percent_Text"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:textSize="30sp"
				android:gravity="right"
				android:layout_weight="1"/>
		</LinearLayout>

		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:orientation="horizontal">
			<Button
	  			android:id="@+id/but_stop_copy" 
	  			android:text="@string/str_copystop"
				android:layout_height="40dip" 
				android:layout_width="200dip" 
				android:gravity="center"/>  
		</LinearLayout>
</LinearLayout>
